--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Web app</title>
-</head>
-<body>
-  <h1>Web app</h1>
-  <h2>Dev lead's temporary heading</h2>
-  <h2>Annie's Fake Heading</h2>
-  <h3>Kayla's Fake Heading</h3>
+---
+layout: default
+meta: Brewski is a prototype web app that generates beer selections. Find a brew for you!
 
-</body>
-</html>
+og-url: https://deltatrio.github.io/web-app/
+---
