Add css files, profile page and bottom navigation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 meta: Brewski is a prototype web app that generates beer selections. Find a brew for you!
-
 og-url: https://deltatrio.github.io/web-app/
+
+skip-link-1:
+skip-link-2:
+skip-link-title-1:
+skip-link-title-2:
 ---
