--- a/punk-ipa.html
+++ b/punk-ipa.html
@@ -9,4 +9,38 @@ skip-link-title-1:
 skip-link-title-2:
 ---
 
-{% include banner.html class="Blonde Ale" heading="Punk IPA" banner-img="placeholder-16by9.svg" banner-alt="" %}
+{% include banner.html class="Blonde Ale" heading="Punk IPA" banner-img="placeholder-16by9.svg" banner-alt="" likes="1385"%}
+
+<section class="wrapper gutter-1-2 pad-t info-section">
+  <div>
+    <p class="tag island-1-4 push-r-1-2 inline-block">Spiky</p>
+    <p class="tag island-1-4 push-r-1-2 inline-block">Tropical</p>
+    <p class="tag island-1-4 inline-block">Hoppy</p>
+  </div>
+  <div class="info-icons">
+    <div class="inline-block percent text-center">
+      <i class="icon i-48">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#percent"></use></svg>
+      </i>
+      <p class="text-center pad-t-1-4">4.7%</p>
+    </div>
+    <div class="inline-block taste text-center">
+      <i class="icon i-48">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#taste"></use></svg>
+      </i>
+      <p class="text-center pad-t-1-4">19 IBU</p>
+    </div>
+    <div class="inline-block barley text-center">
+      <i class="icon i-48">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#barley"></use></svg>
+      </i>
+      <p class="text-center pad-t-1-4">Pale</p>
+    </div>
+    <div class="inline-block hops text-center">
+      <i class="icon i-48">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#hops"></use></svg>
+      </i>
+      <p class="text-center pad-t-1-4">Cascade</p>
+    </div>
+  </div>
+</section>
