Finish profile page
As well as add the button style

--- a/punk-ipa.html
+++ b/punk-ipa.html
@@ -11,7 +11,7 @@ skip-link-title-2:
 
 {% include banner.html class="Blonde Ale" heading="Punk IPA" banner-img="placeholder-16by9.svg" banner-alt="" likes="1385"%}
 
-<section class="wrapper gutter-1-2 pad-t info-section">
+<section class="wrapper gutter-1-2 pad-t info-section push-2">
   <div>
     <p class="tag island-1-4 push-r-1-2 inline-block">Spiky</p>
     <p class="tag island-1-4 push-r-1-2 inline-block">Tropical</p>
@@ -43,4 +43,6 @@ skip-link-title-2:
       <p class="text-center pad-t-1-4">Cascade</p>
     </div>
   </div>
+  <p class="bio max-length-no-center">Our scene-stealing flagship is an India Pale Ale that has become a byword for craft beer rebellion; synonymous with the insurgency against mass-produced, lowest common denominator beer.</p>
+  <button class="btn btn-ghost push-2">Near You</button>
 </section>
