Jekyll the login page
Connect them all correctlly and add the main css. Fix the button states.

--- a/punk-ipa.html
+++ b/punk-ipa.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: navigation
 meta: Punk IPA is and India Pale Ale that stands up to the over commercialized beers. Rebel today!
 og-url: https://deltatrio.github.io/punk-ipa/
 
@@ -44,5 +44,5 @@ skip-link-title-2:
     </div>
   </div>
   <p class="bio max-length-no-center">Our scene-stealing flagship is an India Pale Ale that has become a byword for craft beer rebellion; synonymous with the insurgency against mass-produced, lowest common denominator beer.</p>
-  <button class="btn btn-ghost push-2">Near You</button>
+  <button class="btn btn-ghost-brew push-2">Near You</button>
 </section>
