--- a/brew.html
+++ b/brew.html
@@ -4,7 +4,7 @@ layout: navigation
 
 <section class="wrapper gutter-1-2 text-center pad-t-2 brew-section">
   <h1 class="peta not-bold push-2" id="brew-text">Click to brew</h1>
-  <div onclick="delay ('{{site.baseurl}}/punk-ipa')">
+  <div onclick="delay ('{{site.baseurl}}/punk-ipa/')">
     <svg xmlns="http://www.w3.org/2000/svg" class="w-1-2 brewing" viewBox="4281 221 194 388" id="brewing">
       <defs>
         <style>
@@ -34,6 +34,24 @@ layout: navigation
         <g id="rect-group" data-name="rect-group">
           <rect id="rect-white" data-name="rect-white" class="cls-1" width="194" height="194" transform="translate(87 185)"/>
           <rect id="rect-orange" data-name="rect-orange" class="cls-2" width="194" height="194" transform="translate(87 379)"/>
+        </g>
+      </g>
+
+      <g id="bubble" data-name="bubble" transform="translate(4194 36)" clip-path="url(#circle-clip)">
+        <g class="bubble-group-slow bubble-group" id="bubble-group-slow">
+          <circle id="bubble-1" data-name="bubble-1" class="cls-1" cx="4.027" cy="4.027" r="4.027" transform="translate(213.664, 215.811)" fill-opacity="0.7"/>
+          <circle id="bubble-2" data-name="bubble-2" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(214.814, 195.102)" fill-opacity="0.7"/>
+          <circle id="bubble-3" data-name="bubble-3" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(138.883, 199.704)" fill-opacity="0.7"/>
+        </g>
+        <g class="bubble-group-med bubble-group" id="bubble-group-med">
+          <circle id="bubble-4" data-name="bubble-4" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(253.931, 219.263)" fill-opacity="0.7"/>
+          <circle id="bubble-5" data-name="bubble-5" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(100.917, 235.369)" fill-opacity="0.7"/>
+          <circle id="bubble-6" data-name="bubble-6" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(248.178, 251.476)" fill-opacity="0.7"/>
+        </g>
+        <g class="bubble-group-fast bubble-group" id="bubble-group-fast">
+          <circle id="bubble-7" data-name="bubble-7" class="cls-1" cx="2.301" cy="2.301" r="2.301" transform="translate(136.582, 268.733)" fill-opacity="0.7"/>
+          <circle id="bubble-8" data-name="bubble-8" class="cls-1" cx="4.027" cy="4.027" r="4.027" transform="translate(197.499 207.267)" fill-opacity="0.7"/>
+          <circle id="bubble-9" data-name="bubble-9" class="cls-1" cx="5.752" cy="5.752" r="5.752" transform="translate(143.427 216.471)" fill-opacity="0.7"/>
         </g>
       </g>
 
