Created and added assets to profile page
Finsihed page with all assests and is responsive. Need to add banner image.

--- a/punk-ipa.html
+++ b/punk-ipa.html
@@ -1,6 +1,6 @@
 ---
 layout: navigation
-meta: Punk IPA is and India Pale Ale that stands up to the over commercialized beers. Rebel today!
+meta: Punk IPA is an India Pale Ale that stands up to the over commercialized beers. Rebel today!
 og-url: https://deltatrio.github.io/punk-ipa/
 
 skip-link-1:
