--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-meta:
+layout: navigation
+meta: Update your profile page preferences to let Brewski find your new favourites.
 og-url: https://deltatrio.github.io/profile/
 
 skip-link-1:
@@ -8,3 +8,81 @@ skip-link-2:
 skip-link-title-1:
 skip-link-title-2:
 ---
+
+<section class="banner relative wrapper">
+  <div class="embed embed-16by9">
+    <img class="img-flex embed-item" src="{{site.baseurl}}/images/placeholder-16by9.svg">
+    <div class="banner-profile embed-item absolute pin-bottom-center"></div>
+  </div>
+  <div class="banner-info">
+    <div class="absolute pin-bottom-left gutter-1-2">
+      <img class="img-flex profile-pic" src="{{site.baseurl}}/images/profile-picture.jpg">
+    </div>
+    <div class="banner-text absolute pin-bottom-right gutter-1-2">
+      <h1 class="profile-heading nina">James Black</h1>
+    </div>
+    <div class="banner-edit absolute pin-top-right text-right pad-t gutter-1-2">
+      <i class="icon i-32">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#edit"></use></svg>
+      </i>
+      <p class="pad-t-1-2">edit</p>
+    </div>
+  </div>
+</section>
+
+<section class="wrapper gutter-1-2 pad-t info-section push-2 pad-b-2">
+  <div>
+    <p class="tag island-1-4 push-r-1-2 inline-block">Spiky</p>
+    <p class="tag island-1-4 push-r-1-2 inline-block">Pine</p>
+    <p class="tag island-1-4 push-r-1-2 inline-block">Tropical</p>
+    <p class="tag island-1-4 inline-block">Hoppy</p>
+  </div>
+  <div class="info-icons">
+    <div class="inline-block percent text-center">
+      <i class="icon i-48">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#percent"></use></svg>
+      </i>
+      <p class="text-center pad-t-1-4">2-7%</p>
+    </div>
+    <div class="inline-block taste text-center">
+      <i class="icon i-48">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#taste"></use></svg>
+      </i>
+      <p class="text-center pad-t-1-4">~35 IBU</p>
+    </div>
+    <div class="inline-block barley text-center">
+      <i class="icon i-48">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#barley"></use></svg>
+      </i>
+      <p class="text-center pad-t-1-4">Pale</p>
+    </div>
+    <div class="inline-block hops text-center">
+      <i class="icon i-48">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#hops"></use></svg>
+      </i>
+      <p class="text-center pad-t-1-4">Cascade</p>
+    </div>
+    <div class="push-2">
+      <h3 class="push-1-4">Top 5 Favourites</h3>
+      <ol class="gutter">
+        <li class="push-1-4">Harpoon IPA</li>
+        <li class="push-1-4">Goose Island IPA</li>
+        <li class="push-1-4">Sierra Nevada Stout Stone IPA</li>
+        <li class="push-1-4">Dogfish Head</li>
+        <li class="push-1-4">90 Minute IPA</li>
+      </ol>
+    </div>
+  </div>
+  <div class="push-2">
+    <ul class="segmented-control push-2">
+      <li class="segmented-control-item">
+        <input class="segmented-control-input" type="radio" value="1" name="option" id="option-1" checked>
+        <label class="segmented-control-label" for="option-1">Local</label>
+      </li>
+      <li class="segmented-control-item">
+        <input class="segmented-control-input" type="radio" value="2" name="option" id="option-2" >
+        <label class="segmented-control-label" for="option-2">Commercial</label>
+      </li>
+    </ul>
+  </div>
+</section>
