Cleaning up the code
Adding the images that everyone needs. Fixing the skip links.

--- a/brew.html
+++ b/brew.html
@@ -1,66 +1,69 @@
 ---
 layout: navigation
+og-url: brew
 ---
 
-<section class="wrapper gutter-1-2 text-center pad-t-2 brew-section">
-  <h1 class="peta not-bold push-2" id="brew-text">Click to brew</h1>
-  <div onclick="delay ('{{site.baseurl}}/punk-ipa/')">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-1-2 brewing" viewBox="4281 221 194 388" id="brewing">
-      <defs>
-        <style>
-          .cls-1 {
-            fill: #fff;
-          }
+<section class="text-center brew-section">
+  <div class="wrapper gutter-1-2 pad-t-2">
+    <h1 class="peta not-bold push-2" id="brew-text">Click to brew</h1>
+    <div onclick="delay ('{{site.baseurl}}/punk-ipa/')">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-1-2 brewing" viewBox="4281 221 194 388" id="brewing">
+        <defs>
+          <style>
+            .cls-1 {
+              fill: #fff;
+            }
 
-          .cls-2 {
-            fill: #ffc30d;
-          }
+            .cls-2 {
+              fill: #ffc30d;
+            }
 
-          .cls-3 {
-            fill: #303030;
-          }
-        </style>
+            .cls-3 {
+              fill: #303030;
+            }
+          </style>
 
-        <clipPath id="circle-clip">
-          <circle id="bg-circle" data-name="bg-circle" class="cls-1" cx="91.57" cy="91.57" r="91.57" transform="translate(92 190)"/>
-        </clipPath>
+          <clipPath id="circle-clip">
+            <circle id="bg-circle" data-name="bg-circle" class="cls-1" cx="91.57" cy="91.57" r="91.57" transform="translate(92 190)"/>
+          </clipPath>
 
-        <clipPath id="beer-clip">
-          <path id="beer" data-name="beer" d="M60.785,40.491h-1.5a13.283,13.283,0,0,0,4.029-9.67,13.732,13.732,0,0,0-13.7-13.7,14.29,14.29,0,0,0-3.108.345A16.631,16.631,0,0,0,29.932,2.5,16.454,16.454,0,0,0,13.7,15.739,14.6,14.6,0,0,0,0,30.245,14.374,14.374,0,0,0,8.174,43.254V93.563a6.8,6.8,0,0,0,6.792,6.792H46.74a6.8,6.8,0,0,0,6.792-6.792V89.418H60.67c5.526,0,9.9-5.641,9.9-12.664v-23.6C70.686,46.132,66.2,40.491,60.785,40.491Zm6.332,36.264c0,4.49-2.878,8.059-6.332,8.059H53.648V44.981h7.138c3.454,0,6.332,3.684,6.332,8.059Z" transform="translate(148.135 229.732)"/>
-        </clipPath>
+          <clipPath id="beer-clip">
+            <path id="beer" data-name="beer" d="M60.785,40.491h-1.5a13.283,13.283,0,0,0,4.029-9.67,13.732,13.732,0,0,0-13.7-13.7,14.29,14.29,0,0,0-3.108.345A16.631,16.631,0,0,0,29.932,2.5,16.454,16.454,0,0,0,13.7,15.739,14.6,14.6,0,0,0,0,30.245,14.374,14.374,0,0,0,8.174,43.254V93.563a6.8,6.8,0,0,0,6.792,6.792H46.74a6.8,6.8,0,0,0,6.792-6.792V89.418H60.67c5.526,0,9.9-5.641,9.9-12.664v-23.6C70.686,46.132,66.2,40.491,60.785,40.491Zm6.332,36.264c0,4.49-2.878,8.059-6.332,8.059H53.648V44.981h7.138c3.454,0,6.332,3.684,6.332,8.059Z" transform="translate(148.135 229.732)"/>
+          </clipPath>
 
-      </defs>
-      <g id="background-group" data-name="circle-group" transform="translate(4194 36)" clip-path="url(#circle-clip)">
-        <g id="rect-group" data-name="rect-group">
-          <rect id="rect-white" data-name="rect-white" class="cls-1" width="194" height="194" transform="translate(87 185)"/>
-          <rect id="rect-orange" data-name="rect-orange" class="cls-2" width="194" height="194" transform="translate(87 379)"/>
+        </defs>
+        <g id="background-group" data-name="circle-group" transform="translate(4194 36)" clip-path="url(#circle-clip)">
+          <g id="rect-group" data-name="rect-group">
+            <rect id="rect-white" data-name="rect-white" class="cls-1" width="194" height="194" transform="translate(87 185)"/>
+            <rect id="rect-orange" data-name="rect-orange" class="cls-2" width="194" height="194" transform="translate(87 379)"/>
+          </g>
         </g>
-      </g>
 
-      <g id="bubble" data-name="bubble" transform="translate(4194 36)" clip-path="url(#circle-clip)">
-        <g class="bubble-group-slow bubble-group" id="bubble-group-slow">
-          <circle id="bubble-1" data-name="bubble-1" class="cls-1" cx="4.027" cy="4.027" r="4.027" transform="translate(213.664, 215.811)" fill-opacity="0.7"/>
-          <circle id="bubble-2" data-name="bubble-2" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(214.814, 195.102)" fill-opacity="0.7"/>
-          <circle id="bubble-3" data-name="bubble-3" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(138.883, 199.704)" fill-opacity="0.7"/>
+        <g id="bubble" data-name="bubble" transform="translate(4194 36)" clip-path="url(#circle-clip)">
+          <g class="bubble-group-slow bubble-group" id="bubble-group-slow">
+            <circle id="bubble-1" data-name="bubble-1" class="cls-1" cx="4.027" cy="4.027" r="4.027" transform="translate(213.664, 215.811)" fill-opacity="0.7"/>
+            <circle id="bubble-2" data-name="bubble-2" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(214.814, 195.102)" fill-opacity="0.7"/>
+            <circle id="bubble-3" data-name="bubble-3" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(138.883, 199.704)" fill-opacity="0.7"/>
+          </g>
+          <g class="bubble-group-med bubble-group" id="bubble-group-med">
+            <circle id="bubble-4" data-name="bubble-4" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(253.931, 219.263)" fill-opacity="0.7"/>
+            <circle id="bubble-5" data-name="bubble-5" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(100.917, 235.369)" fill-opacity="0.7"/>
+            <circle id="bubble-6" data-name="bubble-6" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(248.178, 251.476)" fill-opacity="0.7"/>
+          </g>
+          <g class="bubble-group-fast bubble-group" id="bubble-group-fast">
+            <circle id="bubble-7" data-name="bubble-7" class="cls-1" cx="2.301" cy="2.301" r="2.301" transform="translate(136.582, 268.733)" fill-opacity="0.7"/>
+            <circle id="bubble-8" data-name="bubble-8" class="cls-1" cx="4.027" cy="4.027" r="4.027" transform="translate(197.499 207.267)" fill-opacity="0.7"/>
+            <circle id="bubble-9" data-name="bubble-9" class="cls-1" cx="5.752" cy="5.752" r="5.752" transform="translate(143.427 216.471)" fill-opacity="0.7"/>
+          </g>
         </g>
-        <g class="bubble-group-med bubble-group" id="bubble-group-med">
-          <circle id="bubble-4" data-name="bubble-4" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(253.931, 219.263)" fill-opacity="0.7"/>
-          <circle id="bubble-5" data-name="bubble-5" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(100.917, 235.369)" fill-opacity="0.7"/>
-          <circle id="bubble-6" data-name="bubble-6" class="cls-1" cx="1.15" cy="1.15" r="1.15" transform="translate(248.178, 251.476)" fill-opacity="0.7"/>
-        </g>
-        <g class="bubble-group-fast bubble-group" id="bubble-group-fast">
-          <circle id="bubble-7" data-name="bubble-7" class="cls-1" cx="2.301" cy="2.301" r="2.301" transform="translate(136.582, 268.733)" fill-opacity="0.7"/>
-          <circle id="bubble-8" data-name="bubble-8" class="cls-1" cx="4.027" cy="4.027" r="4.027" transform="translate(197.499 207.267)" fill-opacity="0.7"/>
-          <circle id="bubble-9" data-name="bubble-9" class="cls-1" cx="5.752" cy="5.752" r="5.752" transform="translate(143.427 216.471)" fill-opacity="0.7"/>
-        </g>
-      </g>
 
-      <g id="beer-group" data-name="beer-group" transform="translate(4194 36)" clip-path="url(#beer-clip)">
-        <g id="rect-group-2" data-name="rect-group">
-          <rect id="rect-grey" data-name="rect-grey" class="cls-3" width="194" height="194" transform="translate(87 185)"/>
-          <rect id="rect-white-2" data-name="rect-white-2" class="cls-1" width="194" height="194" transform="translate(87 379)"/>
+        <g id="beer-group" data-name="beer-group" transform="translate(4194 36)" clip-path="url(#beer-clip)">
+          <g id="rect-group-2" data-name="rect-group">
+            <rect id="rect-grey" data-name="rect-grey" class="cls-3" width="194" height="194" transform="translate(87 185)"/>
+            <rect id="rect-white-2" data-name="rect-white-2" class="cls-1" width="194" height="194" transform="translate(87 379)"/>
+          </g>
         </g>
-      </g>
-    </svg>
+      </svg>
+    </div>
   </div>
 </section>
