--- a/punk-ipa.html
+++ b/punk-ipa.html
@@ -1,48 +1,50 @@
 ---
 layout: navigation
 meta: Punk IPA is an India Pale Ale that stands up to the over commercialized beers. Rebel today!
-og-url: https://deltatrio.github.io/punk-ipa/
+og-url: punk-ipa
 
 skip-link-1:
 skip-link-2:
 skip-link-title-1:
 skip-link-title-2:
 ---
+<section class="info-section">
 
-{% include banner.html class="Blonde Ale" heading="Punk IPA" banner-img="placeholder-16by9.svg" banner-alt="" likes="1385"%}
+{% include banner.html class="Blonde Ale" heading="Punk IPA" banner-img="punk-ipa-banner.jpg" banner-alt="" likes="1385"%}
 
-<section class="wrapper gutter-1-2 pad-t info-section push-2">
-  <div>
-    <p class="tag island-1-4 push-r-1-2 inline-block">Spiky</p>
-    <p class="tag island-1-4 push-r-1-2 inline-block">Tropical</p>
-    <p class="tag island-1-4 inline-block">Hoppy</p>
+  <div class="wrapper gutter-1-2 pad-t push-2">
+    <div>
+      <p class="tag island-1-4 push-r-1-2 inline-block">Spiky</p>
+      <p class="tag island-1-4 push-r-1-2 inline-block">Tropical</p>
+      <p class="tag island-1-4 inline-block">Hoppy</p>
+    </div>
+    <div class="info-icons">
+      <div class="inline-block percent text-center">
+        <i class="icon i-48">
+          <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#percent"></use></svg>
+        </i>
+        <p class="text-center pad-t-1-4">4.7%</p>
+      </div>
+      <div class="inline-block taste text-center">
+        <i class="icon i-48">
+          <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#taste"></use></svg>
+        </i>
+        <p class="text-center pad-t-1-4">19 IBU</p>
+      </div>
+      <div class="inline-block barley text-center">
+        <i class="icon i-48">
+          <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#barley"></use></svg>
+        </i>
+        <p class="text-center pad-t-1-4">Pale</p>
+      </div>
+      <div class="inline-block hops text-center">
+        <i class="icon i-48">
+          <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#hops"></use></svg>
+        </i>
+        <p class="text-center pad-t-1-4">Cascade</p>
+      </div>
+    </div>
+    <p class="bio max-length-no-center">Our scene-stealing flagship is an India Pale Ale that has become a byword for craft beer rebellion; synonymous with the insurgency against mass-produced, lowest common denominator beer.</p>
+    <button class="btn btn-ghost-brew push-2">Near You</button>
   </div>
-  <div class="info-icons">
-    <div class="inline-block percent text-center">
-      <i class="icon i-48">
-        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#percent"></use></svg>
-      </i>
-      <p class="text-center pad-t-1-4">4.7%</p>
-    </div>
-    <div class="inline-block taste text-center">
-      <i class="icon i-48">
-        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#taste"></use></svg>
-      </i>
-      <p class="text-center pad-t-1-4">19 IBU</p>
-    </div>
-    <div class="inline-block barley text-center">
-      <i class="icon i-48">
-        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#barley"></use></svg>
-      </i>
-      <p class="text-center pad-t-1-4">Pale</p>
-    </div>
-    <div class="inline-block hops text-center">
-      <i class="icon i-48">
-        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#hops"></use></svg>
-      </i>
-      <p class="text-center pad-t-1-4">Cascade</p>
-    </div>
-  </div>
-  <p class="bio max-length-no-center">Our scene-stealing flagship is an India Pale Ale that has become a byword for craft beer rebellion; synonymous with the insurgency against mass-produced, lowest common denominator beer.</p>
-  <button class="btn btn-ghost-brew push-2">Near You</button>
 </section>
