Created maps page
Embedded Google maps and customized it using the new maps tool.

--- a/punk-ipa-map.html
+++ b/punk-ipa-map.html
@@ -8,3 +8,7 @@ skip-link-2:
 skip-link-title-1:
 skip-link-title-2:
 ---
+
+<div class="wrapper gutter-1-2 pad-t push-2">
+  <iframe src="https://www.google.com/maps/d/embed?mid=1AKD-_dL1GK_a-GrVbUaDaQrAXx6qjSa4" width="100%" height="530"></iframe>
+</div>
