Add a profile navigation log out
Split all the CSS into more managble files.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 meta: Login to Brewski to find the perfect beer!
 ---
 
-<section class="login-section">
-  <div class="pin-tc max-length text-center">
-    <div class="wrapper gutter-1-2 pad-t-2">
-      <a itemprop="url" class="grid-middle" href="{{site.baseurl}}/">
-        <i class="icon i-96 unit xs-1-2">
+<section class="signin-section">
+  <div class="text-center pad-b-2">
+    <div class="wrapper gutter-1-2 pad-t-2 pad-b-1-2">
+      <a itemprop="url" href="{{site.baseurl}}/">
+        <i class="icon i-96">
           <svg id="brewski-logo" width="89.2" height="128.2" viewBox="0 0 89.2 128.2">
             <style>
             .st0{fill:#ffe27d}.st1{fill:#ffc30d;stroke:#ffe27d;stroke-width:1.173;stroke-miterlimit:10}.st2{opacity:.75}.st3{fill:#fff}.st4{fill:#fbf4db;stroke:#ffe27e;stroke-width:1.193;stroke-miterlimit:10}.st5{fill:#303030}
@@ -33,15 +33,15 @@ meta: Login to Brewski to find the perfect beer!
     </div>
     <h1 class="logo-text peta push-0 unit xs-1-2">Brewski</h1>
   </div>
-  <div class="island-2 pad-t-2 pin-c">
+  <div class="pad-t-2 text-center">
     <div class="island-1-4">
-      <input type="text" class="sign-in black" value="Username" onfocus="this.value = this.value=='Username'?'':this.value;" onblur="this.value = this.value==''?'Username':this.value;">
+      <input type="text" value="Username" onfocus="this.value = this.value=='Username'?'':this.value;" onblur="this.value = this.value==''?'Username':this.value;">
     </div>
     <div class="island-1-4">
-      <input type="password" class="sign-in black" value="Password" onfocus="this.value = this.value=='Password'?'':this.value;" onblur="this.value = this.value==''?'Password':this.value;">
+      <input type="password" value="Password" onfocus="this.value = this.value=='Password'?'':this.value;" onblur="this.value = this.value==''?'Password':this.value;">
     </div>
     <div class="island-1-4">
-      <a href="{{site.baseurl}}/brew" class="btn btn-ghost sign-in milli" type="submit">Sign In</a>
+      <a href="{{site.baseurl}}/brew" class="btn btn-ghost signin milli" type="submit">Sign In</a>
     </div>
   </div>
 </section>
