--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 ---
 layout: navigation
 meta: Update your profile page preferences to let Brewski find your new favourites.
-og-url: https://deltatrio.github.io/profile/
+og-url: profile
 
 skip-link-1:
 skip-link-2:
