--- a/punk-ipa.html
+++ b/punk-ipa.html
@@ -1,5 +1,6 @@
 ---
 layout: navigation
+title: Punk IPA
 meta: Punk IPA is an India Pale Ale that stands up to the over commercialized beers. Rebel today!
 og-url: punk-ipa
 
@@ -14,9 +15,11 @@ skip-link-title-2:
 
   <div class="wrapper gutter-1-2 pad-t push-2">
     <div>
-      <p class="tag island-1-4 push-r-1-2 inline-block">Spiky</p>
-      <p class="tag island-1-4 push-r-1-2 inline-block">Tropical</p>
-      <p class="tag island-1-4 inline-block">Hoppy</p>
+      <ul class="list">
+        <li class="tag island-1-4 push-r-1-2 inline-block">Spiky</li>
+        <li class="tag island-1-4 push-r-1-2 inline-block">Tropical</li>
+        <li class="tag island-1-4 inline-block">Hoppy</li>
+      </ul>
     </div>
     <div class="info-icons">
       <div class="inline-block percent text-center">
@@ -44,7 +47,7 @@ skip-link-title-2:
         <p class="text-center pad-t-1-4">Cascade</p>
       </div>
     </div>
-    <p class="bio max-length-no-center">Our scene-stealing flagship is an India Pale Ale that has become a byword for craft beer rebellion; synonymous with the insurgency against mass-produced, lowest common denominator beer.</p>
-    <button class="btn btn-ghost-brew push-2">Near You</button>
+    <p itemprop="description" class="bio max-length-no-center">Our scene-stealing flagship is an India Pale Ale that has become a byword for craft beer rebellion; synonymous with the insurgency against mass-produced, lowest common denominator beer.</p>
+    <a href="{{site.baseurl}}/punk-ipa-map" class="btn btn-ghost-brew push-2">Near You</a>
   </div>
 </section>
