--- a/rating-page.html
+++ b/rating-page.html
@@ -15,7 +15,7 @@ layout: navigation
     <img src="http://via.placeholder.com/350x350">
     <p class="beer-1 bold absolute pin-bottom-left gutter">Punk<br>IPA</p>
     <i class="absolute pin-top-right icon i-48">
-      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs"></use></svg>
+      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs-up"></use></svg>
     </i>
   </div>
   <div class="unit-xs-1-2 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
