--- a/recent.html
+++ b/recent.html
@@ -11,31 +11,33 @@ layout: navigation
 
 <div id="rated" class="tabcontent grid wrapper gutter-1-4">
   <div class="unit-xs-1-2 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
-    <img src="http://via.placeholder.com/350x350">
+    <img src="{{site.baseurl}}/images/ratings-punk.jpg">
     <p class="beer-1 bold absolute pin-bottom-left gutter">Punk<br>IPA</p>
     <i class="absolute pin-top-right icon i-48">
-      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs"></use></svg>
+      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs-up"></use></svg>
     </i>
   </div>
   <div class="unit-xs-1-2 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
-    <img src="http://via.placeholder.com/350x350">
+    <img src="{{site.baseurl}}/images/ratings-effect.jpg">
     <p class="beer-1 bold absolute pin-bottom-left gutter">Cause<br>& Effect</p>
     <i class="absolute pin-top-right icon i-48">
-      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs"></use></svg>
+      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs-down"></use></svg>
     </i>
   </div>
   <div class="unit-xs-1-2 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
-    <img src="http://via.placeholder.com/350x350">
+    <img src="{{site.baseurl}}/images/ratings-detour.jpg">
     <p class="beer-1 bold absolute pin-bottom-left gutter">Detour</p>
     <i class="absolute pin-top-right icon i-48">
-      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs"></use></svg>
+      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs-up"></use></svg>
     </i>
   </div>
   <div class="unit-xs-1-2 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
-    <img src="http://via.placeholder.com/350x350">
+    <img src="{{site.baseurl}}/images/ratings-lone.jpg">
     <p class="beer-1 bold absolute pin-bottom-left gutter">Lone Pine</p>
     <i class="absolute pin-top-right icon i-48">
-      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs"></use></svg>
+      <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs-down
+
+      "></use></svg>
     </i>
   </div>
 </div>
@@ -44,7 +46,7 @@ layout: navigation
     <ul class="push-0">
       <li class="grid">
         <i class="unit xs-1-4 s-1-4 m-1-4 l-1-4 icon i-72">
-          <img class="island-1-2" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img class="island-1-2" src="{{site.baseurl}}/images/punk.svg" alt="">
         </i>
         <a class="beer-1 list unit xs-1-2 s-1-2 m-1-2 l-1-2 island-1-2" href="#">Punk IPA</a>
         <i class="icon i-48 unit xs-1-4 s-1-4 m-1-4 l-1-4">
@@ -53,7 +55,7 @@ layout: navigation
       </li>
       <li class="grid">
         <i class="unit xs-1-4 s-1-4 m-1-4 l-1-4 icon i-72">
-          <img class="island-1-2" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img class="island-1-2" src="{{site.baseurl}}/images/cae.svg" alt="">
         </i>
         <a class="beer-1 list unit xs-4 s-4 m-4 l-4 island-1-2" href="#">Cause & Effect</a>
         <i class="icon i-48 unit xs-1-4 s-1-4 m-1-4 l-1-4">
@@ -62,7 +64,7 @@ layout: navigation
       </li>
       <li class="grid">
         <i class="unit xs-1-4 s-1-4 m-1-4 l-1-4 icon i-72">
-          <img class="island-1-2" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img class="island-1-2" src="{{site.baseurl}}/images/detour.svg" alt="">
         </i>
         <a class="beer-1 list unit xs-4 s-4 m-4 l-4 island-1-2" href="#">Detour</a>
         <i class="icon i-48 unit xs-1-4 s-1-4 m-1-4 l-1-4">
@@ -71,7 +73,7 @@ layout: navigation
       </li>
       <li class="grid">
         <i class="unit xs-1-4 s-1-4 m-1-4 l-1-4 icon i-72">
-          <img class="island-1-2" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img class="island-1-2" src="{{site.baseurl}}/images/inuk.svg" alt="">
         </i>
         <a class="beer-1 list unit xs-4 s-4 m-4 l-4 island-1-2" href="#">Inukshuk</a>
         <i class="icon i-48 unit xs-1-4 s-1-4 m-1-4 l-1-4">
@@ -80,7 +82,7 @@ layout: navigation
       </li>
       <li class="grid">
         <i class="unit xs-1-4 s-1-4 m-1-4 l-1-4 icon i-72">
-          <img class="island-1-2" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img class="island-1-2" src="{{site.baseurl}}/images/lone.svg" alt="">
         </i>
         <a class="beer-1 list unit xs-4 s-4 m-4 l-4 island-1-2" href="#">Lone Pine</a>
         <i class="icon i-48 unit xs-1-4 s-1-4 m-1-4 l-1-4">
