Add and resize the images
Delete the placeholder images.

--- a/favourites.html
+++ b/favourites.html
@@ -14,8 +14,9 @@ og-url: recent
 
 <div id="rated" class="tabcontent grid wrapper gutter-1-4 pad-b-2 push-2">
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
-    <a itemprop="url" class="" href="{{site.baseurl}}/punk-ipa">
-      <img itemprop="image" src="http://via.placeholder.com/350x350">
+    <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
+      <img itemprop="image" src="{{site.baseurl}}/images/punk-ipa.jpg">
+      <div class="fav-beer-overlay absolute pin-center"></div>
       <div class="bold absolute pin-bottom-left gutter">
         <h2 class="zetta push-0">Punk IPA</h2>
         <h3 class="not-bold">Blonde Ale</h3>
@@ -26,8 +27,9 @@ og-url: recent
     </a>
   </div>
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
-    <a itemprop="url" class="" href="{{site.baseurl}}/punk-ipa">
-      <img itemprop="image" src="http://via.placeholder.com/350x350">
+    <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
+      <img itemprop="image" src="{{site.baseurl}}/images/cause-and-effect.jpg">
+      <div class="fav-beer-overlay absolute pin-center"></div>
       <div class="bold absolute pin-bottom-left gutter">
         <h2 class="zetta push-0">Cause & Effect</h2>
         <h3 class="not-bold">Blonde Ale</h3>
@@ -38,8 +40,9 @@ og-url: recent
     </a>
   </div>
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
-    <a itemprop="url" class="" href="{{site.baseurl}}/punk-ipa">
-      <img itemprop="image" src="http://via.placeholder.com/350x350">
+    <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
+      <img itemprop="image" src="{{site.baseurl}}/images/detour.jpg">
+      <div class="fav-beer-overlay absolute pin-center"></div>
       <div class="bold absolute pin-bottom-left gutter">
         <h2 class="zetta push-0">Detour</h2>
         <h3 class="not-bold">Golden</h3>
@@ -50,8 +53,9 @@ og-url: recent
     </a>
   </div>
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
-    <a itemprop="url" class="" href="{{site.baseurl}}/punk-ipa">
-      <img itemprop="image" src="http://via.placeholder.com/350x350">
+    <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
+      <img itemprop="image" src="{{site.baseurl}}/images/lonepine.jpg">
+      <div class="fav-beer-overlay absolute pin-center"></div>
       <div class="bold absolute pin-bottom-left gutter">
         <h2 class="zetta push-0">Lone Pine</h2>
         <h3 class="not-bold">India Pale Ale</h3>
@@ -68,7 +72,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/punk-ipa.jpg" alt="">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Punk IPA</h3>
@@ -84,7 +88,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/cause-and-effect.jpg" alt="">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Cause & Effect</h3>
@@ -100,7 +104,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/detour.jpg" alt="">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Detour</h3>
@@ -116,7 +120,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/inukshuk.jpg" alt="">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Inukshuk</h3>
@@ -132,7 +136,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/lonepine.jpg" alt="">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Lone Pine</h3>
@@ -140,22 +144,6 @@ og-url: recent
         <div class="unit xs-1-3 text-right">
           <i class="icon i-48 text-right">
             <svg class="island-1-2 orange"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs-up"></use></svg>
-          </i>
-        </div>
-      </a>
-    </li>
-
-    <li class="grid grid-middle">
-      <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
-        <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/placeholder-circle.svg" alt="">
-        </div>
-        <div class="unit xs-1-3">
-          <h3 class="not-bold push-0 mega">Blue Moon</h3>
-        </div>
-        <div class="unit xs-1-3 text-right">
-          <i class="icon i-48 text-right">
-            <svg class="island-1-2"><use xlink:href="{{site.baseurl}}/images/icons.svg#thumbs"></use></svg>
           </i>
         </div>
       </a>
