--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@ skip-link-title-2:
 
 <section class="banner relative wrapper">
   <div class="embed embed-16by9">
-    <img class="img-flex embed-item" src="{{site.baseurl}}/images/placeholder-16by9.svg">
+    <img class="img-flex embed-item" src="{{site.baseurl}}/images/profile-beer-bg.jpg">
     <div class="banner-profile embed-item absolute pin-bottom-center"></div>
   </div>
   <div class="banner-info">
@@ -20,7 +20,7 @@ skip-link-title-2:
       <img itemprop="image" class="img-flex profile-pic" src="{{site.baseurl}}/images/profile-picture.jpg">
     </div>
     <div class="banner-text absolute pin-bottom-right gutter-1-2">
-      <h1 class="profile-heading nina push-0">James Black</h1>
+      <h1 class="profile-heading nina push-0">James<br>Black</h1>
     </div>
     <div class="banner-edit absolute pin-top-right text-right pad-t gutter-1-2">
       <i class="icon i-24">
