Fix more images

--- a/favourites.html
+++ b/favourites.html
@@ -15,8 +15,10 @@ og-url: recent
 <div id="rated" class="tabcontent grid wrapper gutter-1-4 pad-b-2 push-2">
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
     <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
-      <img itemprop="image" src="{{site.baseurl}}/images/punk-ipa.jpg">
-      <div class="fav-beer-overlay absolute pin-center"></div>
+      <div class="relative">
+        <img itemprop="image" src="{{site.baseurl}}/images/punk-ipa.jpg">
+        <div class="fav-beer-overlay absolute pin-center"></div>
+      </div>
       <div class="bold absolute pin-bottom-left gutter">
         <h2 class="zetta push-0">Punk IPA</h2>
         <h3 class="not-bold">Blonde Ale</h3>
@@ -28,8 +30,10 @@ og-url: recent
   </div>
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
     <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
-      <img itemprop="image" src="{{site.baseurl}}/images/cause-and-effect.jpg">
-      <div class="fav-beer-overlay absolute pin-center"></div>
+      <div class="relative">
+        <img itemprop="image" src="{{site.baseurl}}/images/cause-and-effect.jpg">
+        <div class="fav-beer-overlay absolute pin-center"></div>
+      </div>
       <div class="bold absolute pin-bottom-left gutter">
         <h2 class="zetta push-0">Cause & Effect</h2>
         <h3 class="not-bold">Blonde Ale</h3>
@@ -41,8 +45,10 @@ og-url: recent
   </div>
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
     <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
-      <img itemprop="image" src="{{site.baseurl}}/images/detour.jpg">
-      <div class="fav-beer-overlay absolute pin-center"></div>
+      <div class="relative">
+        <img itemprop="image" src="{{site.baseurl}}/images/detour.jpg">
+        <div class="fav-beer-overlay absolute pin-center"></div>
+      </div>
       <div class="bold absolute pin-bottom-left gutter">
         <h2 class="zetta push-0">Detour</h2>
         <h3 class="not-bold">Golden</h3>
@@ -54,8 +60,10 @@ og-url: recent
   </div>
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
     <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
-      <img itemprop="image" src="{{site.baseurl}}/images/lonepine.jpg">
-      <div class="fav-beer-overlay absolute pin-center"></div>
+      <div class="relative">
+        <img itemprop="image" src="{{site.baseurl}}/images/lonepine.jpg">
+        <div class="fav-beer-overlay absolute pin-center"></div>
+      </div>
       <div class="bold absolute pin-bottom-left gutter">
         <h2 class="zetta push-0">Lone Pine</h2>
         <h3 class="not-bold">India Pale Ale</h3>
